# waggle

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  waggle.service
.bees/: config.json
docker/: Dockerfile  auto_approve.sh  entrypoint.sh  phase1.sh  phase2.sh
docs/: migration.md
examples/: hooks.yaml  mcp-config.json
features/: features.bees-02t.md  features.bees-0je.md  features.bees-0nd.md  features.bees-0ve.md  features.bees-18n.md  features.bees-1as.md  features.bees-1pa.md  features.bees-1qh.md  features.bees-23k.md  features.bees-28i.md  features.bees-29n.md  features.bees-29z.md  features.bees-2av.md  features.bees-2iq.md  features.bees-2jc.md  features.bees-2ki.md  features.bees-2ku.md  features.bees-2nh.md  features.bees-2nq.md  features.bees-2s5.md  features.bees-2wz.md  features.bees-31a.md  features.bees-3d5.md  features.bees-3gs.md  features.bees-3rb.md  features.bees-3se.md  features.bees-3t0.md  features.bees-3th.md  features.bees-3ue.md  features.bees-3v2.md  features.bees-3ve.md  features.bees-3vz.md  features.bees-3wj.md  features.bees-3ym.md  features.bees-3za.md  features.bees-4bd.md  features.bees-4h5.md  features.bees-4py.md  features.bees-4wm.md  features.bees-4xb.md  (+165 more)
hooks/: set_state.sh  settings.json.template
tests/: __init__.py  helpers.py  integration.sh  sample_payloads.py  test_auth.py  test_claude_status_client.py  test_cli.py  test_cli_write_template.py  test_cma_client.py  test_concurrent.py  test_config.py  test_database.py  test_engine.py  test_engine_answer_question.py  test_engine_get_output.py  test_engine_list_spawned_workers.py  test_engine_send_input.py  test_engine_spawn_worker.py  test_engine_spawn_worker_options.py  test_engine_spawn_worker_readiness.py  test_engine_templates_load.py  test_engine_templates_write.py  test_engine_terminate_worker.py  test_helpers_smoke.py  test_hooks.py  test_install_hooks.py  test_install_smoke.py  test_mailer.py  (+27 more)
(+392 files in other folders)
