[tool.poetry]
name = "waggle"
version = "0.1.0"
description = "Database Layer for Agent State Management"
authors = ["waggle"]
readme = "README.md"
packages = [{include = "waggle", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = "^2.14.5"
libtmux = "^0.53"
persist-queue = ">=0.8"
starlette = ">=0.36"
uvicorn = ">=0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^1.3.0"
httpx = ">=0.27"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.scripts]
waggle = "waggle.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
