[tool.poetry]
name = "claude-spawn"
version = "0.1.0"
description = "Stateless stdio MCP server for managing Claude Code worker agents in tmux sessions"
authors = ["Gabe Mahoney"]
license = "MIT"
readme = "README.md"
packages = [{include = "claude_spawn", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = "^2.14.5"
libtmux = "^0.53"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^1.3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.scripts]
claude-spawn = "claude_spawn.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
